refactor controller class